--- a/faq.html
+++ b/faq.html
@@ -110,16 +110,19 @@ are send unencrypted over the internet.
 I've to move my homepage about every year :-( Apparently it get more and more 
 difficult to find a stable free webspace..
 </p>
-
+<p>
+I finally got a stable place for my homepage ( http://staf.patat.org ).<br>
+<strong>thanks</strong> to "de pirre" for hosting my site.
 <p>
 The current locations are:
 </p>
 
 <ul>
-<li><a href="http://stafwag.netfirms.com/cgipaf/">http://stafwag.netfirms.com/cgipaf/ (Canada)</a></li>
+<li><a href="http://staf.patat.org">http://staf.patat.org/cgipaf/</a> (Europe / Belgium)<br>&nbsp;</li>
+<li><a href="http://stafwag.netfirms.com/cgipaf/">http://stafwag.netfirms.com/cgipaf/</a> (North America / Canada)
+<p>Has a problem when you try to download the debian package with apt-get, because they add an ad to the Package file. Please use the main site http://staf.patat.org to download the debian with apt-get.</p></li>
 <li><a
-href="http://stafwag.pws.the-ecorp.com/cgipaf/">http://stafwag.pws.the-ecorp.com/cgipaf/
-(Europe / Belgium)</a></li>
+href="http://stafwag.pws.the-ecorp.com/cgipaf/">http://stafwag.pws.the-ecorp.com/cgipaf/</a> (Europe / Belgium)</li>
 </ul>
 
 <p>
