--- a/faq.html
+++ b/faq.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>CGIpaf 1.1.0pre2 FAQ</title>
+    <title>CGIpaf 1.1.0rc1 FAQ</title>
   </head>
 
   <body>
     
-    <h1>CGIpaf 1.1.0pre2 FAQ</h1>
+    <h1>CGIpaf 1.1.0rc1 FAQ</h1>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
     <ul>
@@ -44,6 +44,7 @@
       <li>3.12 <a href="#ss3.12">Mail forwarding and autoreply doesn't work</a></li>
       <li>3.13 <a href="#ss3.13">Can I create my own html pages?</a></li>
       <li>3.14 <a href="#ss3.14">Can I use vacation/.forward instead of procmail?</a></li>
+      <li>3.15 <a href="#ss3.15">I can't login with passwords longer than ...</a></li>
      </ul>
  
    <p>
@@ -173,7 +174,7 @@ Your problem can be useful to the other CGIpaf users...
 <p>
 CGIpaf is Free software published under the GNU Gernal Public License.<br>
 see <a
-href="http://www.gnu.org/copyleft.html">http://www.gnu.org/licenses/gpl.html</a> for more information.
+href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a> for more information.
 </p>
 
 <hr />
@@ -388,6 +389,15 @@ Will redirect to /pwchanged.php?name="loginname" after a user has succeed to upd
 Yes! You can disable the internal .procmailrc updater of CGIpaf and define an external script
 to update the user's mail configuration. See examples/ for a vacation example.
 </p>
+<h2><a name="ss3.15">3.15</a> I can't login with passwords longer than ...</h2>
+<p>
+You'll have to update mailcfg_login.php, the default maxlength for the password field is 16
+If you need to support longer passwords update mailcfg_login.php
+</p>
+<code><pre><tt>
+ &lt;td&gt;&lt;input name="passwd" type="password" size="8" maxlength="16"&gt;&lt;/td&gt;
+                                                   ^^^^^^^^^^^^^^
+</tt></pre></code>
 <hr>
 <h1><a name="s4">4</a> Future plans</h1>
 <h2><a name="ss4.1">4.1</a> Supported Platforms</h2>
@@ -411,7 +421,7 @@ I'll probably start with this one.
     <address><a href="mailto:staf.wagemakers@advalvas.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Sun Jun 23 20:26:20 CEST 2002
+Last modified: Mon Jul 15 12:49:00 CEST 2002
 <!-- hhmts end -->
   </body>
 </html>
