--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>CGIpaf 1.1.0rc1 FAQ</title>
+    <title>CGIpaf 1.1.0 FAQ</title>
   </head>
 
   <body>
@@ -194,11 +194,11 @@ only supported if you compile CGIpaf without PAM support since Slackware doesn't
 CGIpaf works on Solaris ( only tested with solaris 7 &amp;  8 )
 </p>
 </li>
-<li><b>FreeBSD</b></li>
+<li><b>FreeBSD</b>
 <p>
-FreeBSD is supported, add <kdb>--host=freebsd</kdb> to <kdb>./configure</kdb>
+FreeBSD is supported, add <kbd>--host=freebsd</kbd> to <kbd>./configure</kbd>
 this will compile CGIpaf with FreeBSD support but without PAM support.
-</p>
+</p></li>
 <li><b>OpenBSD, NetBSD</b>
 <p>
 Unfortunately OpenBSD and NetBSD arn't supported (yet). I hope start a port some day.
@@ -394,10 +394,10 @@ to update the user's mail configuration. See examples/ for a vacation example.
 You'll have to update mailcfg_login.php, the default maxlength for the password field is 16
 If you need to support longer passwords update mailcfg_login.php
 </p>
-<code><pre><tt>
+<pre><code><tt>
  &lt;td&gt;&lt;input name="passwd" type="password" size="8" maxlength="16"&gt;&lt;/td&gt;
                                                    ^^^^^^^^^^^^^^
-</tt></pre></code>
+</tt></code></pre>
 <hr>
 <h1><a name="s4">4</a> Future plans</h1>
 <h2><a name="ss4.1">4.1</a> Supported Platforms</h2>
@@ -421,7 +421,7 @@ I'll probably start with this one.
     <address><a href="mailto:staf.wagemakers@advalvas.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Mon Jul 15 12:49:00 CEST 2002
+Last modified: Mon Sep 16 14:44:43 CEST 2002
 <!-- hhmts end -->
   </body>
 </html>
