--- a/Configuration.html
+++ b/Configuration.html
@@ -4,7 +4,7 @@
 <title>CGIpaf configuration</title>
 </head>
 <body bgcolor="#ffffff" text="#000000" link="#0000ff" alink="#ff0000" vlink="#2f009f">
-<h1>CGIpaf 1.1.0RC2 Configuration</h1>
+<h1>CGIpaf 1.2.0PRE1 Configuration</h1>
 <h1>Content</h1>
 <ul>
 <li><a href="#syntax">Syntax</a></li>
@@ -67,12 +67,19 @@
 <li><a href="#error_deldotprocmailrc">error_deldotprocmailrc</a></li>
 <li><a href="#error_openvacations">error_openvacations</a></li>
 <li><a href="#error_updateprocmailrc">error_updateprocmailrc</a></li>
+<li><a href="#aclorder">AclOrder</a></li>
+<li><a href="#allowusers">AllowUsers</a></li>
+<li><a href="#denyusers">DenyUsers</a></li>
+<li><a href="#allowgroups">AllowGroups</a></li>
+<li><a href="#denygroups">DenyGroups</a></li>
 </ul>
 </li>
 <li><a href="#variables">Variables</a></li>
 <li><a href="#redirect">Redirect</a></li>
 <li><a href="#htmlfile">HTML files</a></li>
 <li><a href="#command">run_success and run_locked scripts</a></li>
+<li><a href="#acl">Access Control Lists</a>
+  <ul><li><a href="#aclexamples">Examples</a></li></ul></li>
 </ul>
 <h1><a name="syntax">Syntax</a></h1>
 <p>    
@@ -622,7 +629,42 @@ webmaster"<br>
 <p>	
      Unable to update ~/.procmailrc
 </p>
-"Can't update ~/.procmailrc, please contact the webmaster"
+
+<h2><a name="aclorder">AclOrder</a></h2>
+<strong>Syntax:</strong>   AclOrder  <em>Deny,All</em>  <b>OR</b> <em>Allow,Deny</em><br>
+<strong>Default:</strong>   Deny,Allow<br>
+<strong>Context:</strong>  Global,&lt;passwd&gt;,&lt;mailcfg&gt;
+<p>
+Set the <a href="#acl">Acl</a> order.
+</p>
+<h2><a name="allowusers">AllowUsers</a></h2>
+<strong>Syntax:</strong>   AllowUsers  <em>user1 user2</em>  <b>OR</b> <em>*</em><br>
+<strong>Default:</strong>  see <a href="#acl">Access Control Lists</a><br>
+<strong>Context:</strong>  Global,&lt;passwd&gt;,&lt;mailcfg&gt;
+<p>
+Specify a list of users that are allowed to use CGIpaf see <a href="#acl">Access Control Lists</a>
+</p>
+<h2><a name="denyusers">DenyUsers</a></h2>
+<strong>Syntax:</strong>   DenyUsers  <em>user1 user2</em>  <b>OR</b> <em>*</em><br>
+<strong>Default:</strong>  see <a href="#acl">Access Control Lists</a><br>
+<strong>Context:</strong>  Global,&lt;passwd&gt;,&lt;mailcfg&gt;
+<p>
+Specify a list of users that are denied to use CGIpaf see <a href="#acl">acl</a>
+</p>
+<h2><a name="allowgroups">AllowGroups</a></h2>
+<strong>Syntax:</strong>   AllowGroups  <em>group1 group2</em>  <b>OR</b> <em>*</em><br>
+<strong>Default:</strong>  see <a href="#acl">Access Control Lists</a><br>
+<strong>Context:</strong>  Global,&lt;passwd&gt;,&lt;mailcfg&gt;
+<p>
+Specify a list of groups that are allowed to use CGIpaf see <a href="#acl">acl</a>
+</p>
+<h2><a name="denygroups">DenyGroups</a></h2>
+<strong>Syntax:</strong>   DenyGroups  <em>group1 group2</em>  <b>OR</b> <em>*</em><br>
+<strong>Default:</strong>  see <a href="#acl">Access Control Lists</a><br>
+<strong>Context:</strong>  Global,&lt;passwd&gt;,&lt;mailcfg&gt;
+<p>
+Specify a list of groups that are denied to use CGIpaf see <a href="#acl">acl</a>
+</p>
 
 <h1><a name="variables">Variables</a></h1>
 <p>
@@ -710,5 +752,48 @@ example:
   <pre><tt><code>
   run_success "/usr/sbin/smbpasswd -U %{name} &gt; /dev/null 2&gt;&amp;1" "%{password}\n%{password}\n"
   </code></tt></pre>
+<h1><a name="acl">Access Control Lists</a></h1>
+<p>
+    With Access Control lists you can allow or deny users or groups. 
+</p>
+<p> 
+The <a href="#aclorder">AclOrder</a> directive control the default access state and the order in which the acl is processed.
+</p>
+<dl>
+  <dt>Allow,Deny</dt>
+
+  <dd>The <a href="#allowusers">AllowUsers</a> and <a href="#allowgroups">AllowGroups</a> directives are evaluated before the <a href="#denyusers">DenyUsers</a> and <a href="#denygroups">DenyGroups</a> directives. Access is denied by default.</dd>
+
+  <dt>Deny,Allow</dt>
+
+
+  <dd>The <a href="#denyusers">DenyUsers</a> and <a href="#denygroups">DenyGroups</a> directives are evaluated before the <a href="#allowusers">AllowUsers</a> and <a href="#allowgroups">AllowGroups></a>. Access is granted by default.</dd>
+</dl>
+<p>
+A star (*) in the user or group list means any user or group other wildcards are not supported.
+</p>
+<p>
+<h2><a name="aclexamples">Examples</a></h2>
+<pre><code>
+AclOrder     Deny,Allow
+DenyUsers    *
+AllowUsers   foo
+</code></pre>
+<p>
+Access to user "foo" will be allowed and all other will be denied.   
+</p>
+<pre><code>
+AclOrder     Allow,Deny
+AllowUsers   foo
+</code></pre>
+<p>
+Give the same result as above.
+</p>
+<pre><code>
+AclOrder Allow,Deny
+</code></pre>
+<p>
+Will denied access to all, because the default state is set to deny.
+
 </body>
 </html>
