--- a/faq.html
+++ b/faq.html
@@ -1,17 +1,17 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <title>CGIpaf 1.1.0 FAQ</title>
+    <title>CGIpaf 1.2.0pre1 FAQ</title>
   </head>
 
   <body>
     
-    <h1>CGIpaf 1.1.0rc1 FAQ</h1>
+    <h1>CGIpaf 1.2.0pre1 FAQ</h1>
     <p>
     <h2>1 <a href="#s1">Introduction to CGIpaf</a></h2>
     <ul>
       <li>1.1 <a href="#ss1.1">What is CGIpaf?</a></li>
-      <li>1.2 <a href="#ss1.2">Who secure is CGIpaf</a></li>
+      <li>1.2 <a href="#ss1.2">How secure is CGIpaf</a></li>
       <li>1.3 <a href="#ss1.3">Website</a></li>
       <li>1.4 <a href="#ss1.4">Mailinglist</a></li>
       <li>1.5 <a href="#ss1.5">Support</a></li>
@@ -421,7 +421,7 @@ I'll probably start with this one.
     <address><a href="mailto:staf.wagemakers@advalvas.be">staf wagemakers</a></address>
 <!-- Created: Mon Apr  8 20:42:51 CEST 2002 -->
 <!-- hhmts start -->
-Last modified: Mon Sep 16 14:44:43 CEST 2002
+Last modified: Tue Oct 22 14:07:29 CEST 2002
 <!-- hhmts end -->
   </body>
 </html>
