--- a/Configuration.html
+++ b/Configuration.html
@@ -53,7 +53,7 @@
 <li><a href="#passwd_location">passwd_location</a></li>
 <li><a href="#shadow_location">shadow_location</a></li>
 <li><a href="#illegal_words">illegal_words</a></li>
-<li><a href="#set_pam_change_expired_authtok">set_PAM_CHANGE_EXPIRED_AUTHTOK</a>This directive is absolete, and will be removed...</li>
+<li><a href="#set_pam_change_expired_authtok">set_PAM_CHANGE_EXPIRED_AUTHTOK</a>This directive is absolute, and will be removed...</li>
 <li><a href="#max_invalid">max_invalid</a></li>
 <li><a href="#invalid_timeout">invalid_timeout</a></li>
 <li><a href="#sendmail">sendmail</a></li>
