--- a/faq.html
+++ b/faq.html
@@ -176,7 +176,7 @@ in the mailinglist. Your problem can be useful to the other CGIpaf users...
 <h2><a name="ss1.6">1.6 </a> License</h2>
 
 <p>
-CGIpaf is Free software published under the GNU Gernal Public License.
+CGIpaf is Free software published under the GNU General Public License.
 see <a href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
 for more information.
 </p>
